--- a/projets/Stage_M2_Felipe/style_stage.css
+++ b/projets/Stage_M2_Felipe/style_stage.css
@@ -79,24 +79,27 @@ h1 {
 
 @media screen and (max-width: 767px) {
   .nom {
-    font-size: 320%;
+    font-size: 225%;
     font-family: 'Fredoka', sans-serif;
     text-align: center;
     text-shadow: 0 1px 2px rgba(134, 134, 134, 0.515);
     color: rgb(221, 221, 221);
+    text-shadow: 1px 1px 2px black, /* Sombra preta com deslocamento pequeno */
+    -1px -1px 2px black, /* Outras sombras para criar um efeito mais uniforme */
+    1px -1px 2px black,
+    -1px 1px 2px black;
 
 }
 .nom_moi {
-  font-size: 220%;
+  font-size: 220% !important;
   font-family: 'Fredoka', sans-serif;
   text-align: center;
   text-shadow: 0 1px 2px rgba(134, 134, 134, 0.515);
-  color: rgb(221, 221, 221);
+  color: rgb(221, 221, 221) !important;
   text-shadow: 1px 1px 2px black, /* Sombra preta com deslocamento pequeno */
   -1px -1px 2px black, /* Outras sombras para criar um efeito mais uniforme */
   1px -1px 2px black,
-  -1px 1px 2px black;
-
+  -1px 1px 2px black !important;
 }
 
 }
@@ -141,10 +144,10 @@ h1 {
 }
 
   .description {
-    font-size: 170%;
+    font-size: 140%;
     text-align: center;
     font-family: 'Fredoka', sans-serif;
-    padding-top: 60%;
+    padding-top: 18%;
     color: whitesmoke;
     padding-right: 2%;
     padding-left: 2%;
@@ -630,6 +633,7 @@ input[type="submit"] {
     margin-left: 5%;
     margin-right: 5%;
     border-radius: 10px;
+    width: 90%;
     overflow: hidden;
     border: 1px solid #ccc;
     justify-content: center;
