--- a/style.css
+++ b/style.css
@@ -63,10 +63,10 @@ h1 {
     font-size: 520%;
     font-family: 'Fredoka', sans-serif;
     text-align: center;
-    text-shadow: 1px 1px 2px white, /* Sombra preta com deslocamento pequeno */
-    -1px -1px 2px white, /* Outras sombras para criar um efeito mais uniforme */
-    1px -1px 2px white,
-    -1px 1px 2px white;
+    text-shadow: 1px 1px 2px black, /* Sombra preta com deslocamento pequeno */
+    -1px -1px 2px black, /* Outras sombras para criar um efeito mais uniforme */
+    1px -1px 2px black,
+    -1px 1px 2px black;
 }
 .description {
     font-size: 170%;
